--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <h1>Ramesh Oleti's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <a target="_blank" href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <a target="_blank" href="./public/movie-ranking.html"
+      ><h3>Movie Ranking Project</h3></a
+    >
     <img
       src="./assets/images/movie-ranking.JPG"
-      alt="This is an image of movie-ranking"
+      alt="This is a image of movie-ranking"
       height="300"
     />
     <hr />
-    <h3><a target="_blank" href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <h3>
+      <a target="_blank" href="./public/birthday-invite.html"
+        >Birthday Invite Project</a
+      >
+    </h3>
     <img
       src="./assets/images/birthday-invite.JPG"
       alt="This is an image of birthday-invite"
@@ -28,3 +34,16 @@
     </div>
   </body>
 </html>
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
