--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -15,4 +15,6 @@
 </ul>
 
 <h3>This is where you need to go:</h3>
-<a target="_blank" href="https://goo.gl/maps/heGgTSteuSNWzY1a7">Google map link</a>
+<a target="_blank" target="_blank" href="https://goo.gl/maps/heGgTSteuSNWzY1a7"
+  >Google map link</a
+>
